    replaced by the database plugin.
 -- Added new configuration parameter: CryptoType.
    Moved existing digital signature logic into new plugin: crypto/openssl.
    Added new support for crypto/munge (available with GPL license).

* Changes in SLURM 1.2.29
=========================
 -- Fix for gold not to print out 720 error messages since they are
    potentally harmful.

* Changes in SLURM 1.2.29
=========================
 -- Modified global configuration option "DisableRootJobs" from number (0 or 1)
    to boolean (YES or NO) to match partition parameter.
 -- Set "DisableRootJobs" for a partition to match the global parameters value 
    for newly created partitions.
 -- In sched/wiki and sched/wiki2 report a node's updated features if changed
    after startup using "scontrol update ..." command.
 -- In sched/wiki and sched/wiki2 report a job's state as "Hold" if it's 
    dependencies have not been satisfied.
 -- In sched/wiki and sched/wiki2 do not process incoming requests until
    slurm configuration is completely loaded.
 -- In sched/wiki and sched/wiki2 do not report a job's node count after it 
    has completed (slurm decrements the allocated node count when the nodes
    transition from completing to idle state).
 -- If job prolog or epilog fail, log the program's exit code.
 -- In jobacct/gold map job names containing any non-alphanumeric characters 
    to '_' to avoid MySQL parsing problems.
 -- In jobacct/linux correct parsing if command name contains spaces.
 -- In sched/wiki and sched/wiki2 report make job info TASK count reflect the 
    actual task allocation (not requested tasks) even after job terminates.
    Useful for accounting purposes only.

* Changes in SLURM 1.2.28
=========================
 -- Added configuration option "DisableRootJobs" for parameter 
    "PartitionName".  See "man slurm.conf" for details.
 -- Fix for faking a large system to correctly handle node_id in the task
    afffinity plugin for ia64 systems.
